--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -1707,7 +1707,13 @@
                         </a>
                     </div>
                 </div>
-                <div class="basictable"></div>
+                <div class="basictable">
+                    <div class="basictable-header">
+                        <div>Open Orders(0)</div>
+                        <div>Order History</div>
+                        
+                    </div>
+                </div>
                 <div class="footer"></div>
             </div>
         </div>
