Trade_coin: BasicTable - add two columns with active into header - Update html and add demo73

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -1709,9 +1709,10 @@
                 </div>
                 <div class="basictable">
                     <div class="basictable-header">
-                        <div>Open Orders(0)</div>
+                        <div class="status-orange" style="font-weight: 500;">Open Orders(0)</div>
                         <div>Order History</div>
-                        
+                        <div>Trade History</div>
+                        <div>Funds</div>
                     </div>
                 </div>
                 <div class="footer"></div>
