--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -1673,6 +1673,7 @@ i {
     height: 1em;
 }
 
+/* --------------------------------------- */
 .basictable-header{
     width: 100%;
     display: flex;
