Trade_coin: BasicTable - Finished after add body - Update html, css and add demo74

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -1714,6 +1714,14 @@
                         <div>Trade History</div>
                         <div>Funds</div>
                     </div>
+                    <div class="basictable-body">
+                        <div>
+                            <span class="status-orange">Log In </span>
+                            &nbsp;or&nbsp;
+                            <span class="status-orange">Register Now</span>
+                            to trade
+                        </div>
+                    </div>
                 </div>
                 <div class="footer"></div>
             </div>
