--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -1295,6 +1295,7 @@ i {
 
 .status-orange {
     color: rgb(240, 185, 11) !important;
+    cursor: pointer;
 }
 
 .chart-candle-flex {
@@ -1370,6 +1371,7 @@ i {
     border-top: 2px solid transparent;
     border-bottom: 1px solid rgb(43, 49, 58);
     width: 120px;
+    cursor: pointer;
 }
 .orderform-bItem a{
     box-sizing: border-box;
@@ -1683,4 +1685,13 @@ i {
     margin-right: 24px;
     padding: 16px 1px 10px;
     color: rgb(132, 142, 156);
+    cursor: pointer;
+}
+.basictable-body{
+    margin: auto;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    color: rgb(234, 236, 239);
+    padding: 20px 0px;
 }
