Trade_coin: Header - Create alert and add text to it - Update html, css and add demo75

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -87,7 +87,13 @@
                             </div>
                         </header>
                     </div>
-                    <div></div>
+                    <div class="header-down">
+                        <div class="down-left">
+                            <a href="">FLOKI (FLOKI) and Pepe (PEPE) Listing Will Be Postponed</a>
+                            <a href="">Binance Futures Will Launch USDⓈ-M 1000PEPE Perpetual Contract With Up to 20X Leverage</a>
+                            <a href="">Binance Will List FLOKI (FLOKI) and Pepe (PEPE) in the Innovation Zone</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="subHeader">
                     <div class="subHeader-flex">
