--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -420,6 +420,33 @@ i {
     cursor: none;
 }
 
+/* ----------------------------------------- */
+.header-down{
+    display: flex;
+    width: 100%;
+    max-width: 1444px;
+    padding-left: 24px;
+    padding-right: 32px;
+}
+.down-left{
+    box-sizing: border-box;
+    margin: 0px 8px 0px 0px;
+    min-width: 0px;
+    display: flex;
+    padding: 12px;
+}
+.down-left a{
+    display: flex;
+    flex: 33.333%;
+    font-size: 12px;
+    line-height: 24px;
+    padding: 0 24px;
+    color: rgb(132, 142, 156);
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+/* ----------------------------------------- */
 .subHeader-flex {
     box-sizing: border-box;
     margin: 0px;
