--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -87,13 +87,23 @@
                             </div>
                         </header>
                     </div>
-                    <div class="header-down">
+                    <div class="header-down" id="header-down">
                         <div class="down-left">
-                            <a href="">FLOKI (FLOKI) and Pepe (PEPE) Listing Will Be Postponed</a>
+                            <a href="" style="display: flex; justify-content: center; padding: 0;">FLOKI (FLOKI) and Pepe (PEPE) Listing Will Be Postponed</a>
                             <a href="">Binance Futures Will Launch USDⓈ-M 1000PEPE Perpetual Contract With Up to 20X Leverage</a>
-                            <a href="">Binance Will List FLOKI (FLOKI) and Pepe (PEPE) in the Innovation Zone</a>
+                            <a href="" style="padding-right: 0;">Binance Will List FLOKI (FLOKI) and Pepe (PEPE) in the Innovation Zone</a>
                         </div>
+                        <div style="display: flex; align-items: center; justify-content: center;" ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-16vuvx8"><path d="M13.5 12L7 18.6 8.4 20l8-8-8-8L7 5.4l6.5 6.6z" fill="currentColor"></path></svg></div>
+                        <div id="closeAlert" class="close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-1aufqvs"><path fill-rule="evenodd" clip-rule="evenodd" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-7.233 0l3.006 3.005-1.768 1.768L12 13.767l-3.005 3.005-1.768-1.768 3.005-3.005-3.005-3.005 1.768-1.767L12 10.23l3.005-3.005 1.768 1.767L13.767 12z" fill="currentColor"></path></svg></div>
+                        
                     </div>
+                    <script>
+                            var close = document.getElementById('closeAlert');
+                            var headerDown = document.getElementById('header-down');
+                            close.addEventListener('click', function() {
+                                headerDown.style.display = 'none';
+                            })
+                    </script>
                 </div>
                 <div class="subHeader">
                     <div class="subHeader-flex">
