--- a/static/css/bab_token.css
+++ b/static/css/bab_token.css
@@ -225,6 +225,7 @@ a {
 }
 
 .text_drop {
+    position: relative;
     white-space: nowrap;
     color: white;
     margin: 0px;
@@ -255,6 +256,7 @@ a {
     font-size: 11px;
     margin-bottom: 3px;
 }
+
 .drop_clone_1 {
     box-sizing: border-box;
     margin: 0px;
@@ -264,7 +266,8 @@ a {
     cursor: pointer;
     padding: 23px;
 }
-.node_display{
+
+.node_display {
     display: block;
 }
 
@@ -504,10 +507,12 @@ a {
     margin: 0;
     color: #ffffff;
 }
-.node_width{
+
+.node_width {
     width: auto;
 }
-.text_down{
+
+.text_down {
     box-sizing: border-box;
     margin: 0px;
     min-width: 0px;
@@ -517,7 +522,8 @@ a {
     padding-bottom: 8px;
     text-align: center;
 }
-.text_down_1{
+
+.text_down_1 {
     padding: 6px 12px;
     color: rgb(24, 26, 32);
     border-radius: 4px;
@@ -526,6 +532,7 @@ a {
     box-shadow: none;
     white-space: nowrap;
 }
+
 #icon_menu p,
 i {
     cursor: pointer;
@@ -551,16 +558,39 @@ i {
 }
 
 #style {
-    margin-left: 76.5%;
+    margin-left: 32%;
     padding: 0px;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 48px;
     height: 48px;
-    cursor: pointer;
-    position: absolute;
     background: linear-gradient(211.03deg, #2B2F36 10.78%, rgba(43, 47, 54, 0) 54.07%, #2B2F36 108.18%);
+}
+
+.display_center {
+    display: flex;
+    align-items: center;
+}
+
+.logo_QR {
+    box-sizing: border-box;
+    margin: 0px;
+    min-width: 0px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-size: 85%;
+    background-position: center center;
+    background-repeat: no-repeat;
+    color: yellow;
+    position: absolute;
+    background-image: url(../img/bab_token/logo.png);
+    background-color: rgb(0, 0, 0);
+    border-radius: 4px;
+    border: 3px solid rgb(255, 255, 255);
+    width: 23px;
+    height: 23px;
 }
 
 #body_logo {
@@ -672,7 +702,10 @@ i {
     display: flex;
 }
 
-#table_submit input {
+#table_submit a p {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 284px;
     height: 48px;
     font-size: 18px;
@@ -686,6 +719,11 @@ i {
     padding-right: 12px;
     padding-top: 6px;
     padding-bottom: 6px;
+}
+
+#table_submit a p:hover {
+    box-shadow: 0px 0px 16px 0px rgba(248, 208, 47, 0.37);
+    background-color: rgba(253, 210, 40, 0.925);
 }
 
 #text_title {
