--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -1739,7 +1739,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="footer"></div>
+                <div class="footer">
+                    <div class="footer-left">
+                        <svg width="16" height="12" viewBox="0 0 16 12" fill="none" xmlns="http://www.w3.org/2000/svg"><rect y="9.667" width="1.67" height="2.5" fill="#0ECB81"></rect><rect x="4.44446" y="5.667" width="1.66667" height="6.67" fill="#0ECB81"></rect><rect x="8.88892" y="3" width="1.66667" height="10.83" fill="#0ECB81"></rect><rect x="13.3333" width="1.66667" height="15" fill="#0ECB81"></rect></svg>
+                        <div>Stable Connection</div>
+                    </div>
+                </div>
             </div>
         </div>
 </body>
