Trade_coin: Footer - Create rightflex  and add support item to right - Update html, css and add demo78

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -89,20 +89,31 @@
                     </div>
                     <div class="header-down" id="header-down">
                         <div class="down-left">
-                            <a href="" style="display: flex; justify-content: center; padding: 0;">FLOKI (FLOKI) and Pepe (PEPE) Listing Will Be Postponed</a>
-                            <a href="">Binance Futures Will Launch USDⓈ-M 1000PEPE Perpetual Contract With Up to 20X Leverage</a>
-                            <a href="" style="padding-right: 0;">Binance Will List FLOKI (FLOKI) and Pepe (PEPE) in the Innovation Zone</a>
+                            <a href="" style="display: flex; justify-content: center; padding: 0;">FLOKI (FLOKI) and
+                                Pepe (PEPE) Listing Will Be Postponed</a>
+                            <a href="">Binance Futures Will Launch USDⓈ-M 1000PEPE Perpetual Contract With Up to 20X
+                                Leverage</a>
+                            <a href="" style="padding-right: 0;">Binance Will List FLOKI (FLOKI) and Pepe (PEPE) in the
+                                Innovation Zone</a>
                         </div>
-                        <div style="display: flex; align-items: center; justify-content: center;" ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-16vuvx8"><path d="M13.5 12L7 18.6 8.4 20l8-8-8-8L7 5.4l6.5 6.6z" fill="currentColor"></path></svg></div>
-                        <div id="closeAlert" class="close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-1aufqvs"><path fill-rule="evenodd" clip-rule="evenodd" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-7.233 0l3.006 3.005-1.768 1.768L12 13.767l-3.005 3.005-1.768-1.768 3.005-3.005-3.005-3.005 1.768-1.767L12 10.23l3.005-3.005 1.768 1.767L13.767 12z" fill="currentColor"></path></svg></div>
-                        
+                        <div style="display: flex; align-items: center; justify-content: center;"><svg
+                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-16vuvx8">
+                                <path d="M13.5 12L7 18.6 8.4 20l8-8-8-8L7 5.4l6.5 6.6z" fill="currentColor"></path>
+                            </svg></div>
+                        <div id="closeAlert" class="close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                fill="none" class="css-1aufqvs">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-7.233 0l3.006 3.005-1.768 1.768L12 13.767l-3.005 3.005-1.768-1.768 3.005-3.005-3.005-3.005 1.768-1.767L12 10.23l3.005-3.005 1.768 1.767L13.767 12z"
+                                    fill="currentColor"></path>
+                            </svg></div>
+
                     </div>
                     <script>
-                            var close = document.getElementById('closeAlert');
-                            var headerDown = document.getElementById('header-down');
-                            close.addEventListener('click', function() {
-                                headerDown.style.display = 'none';
-                            })
+                        var close = document.getElementById('closeAlert');
+                        var headerDown = document.getElementById('header-down');
+                        close.addEventListener('click', function () {
+                            headerDown.style.display = 'none';
+                        })
                     </script>
                 </div>
                 <div class="subHeader">
@@ -827,12 +838,17 @@
                     <div class="orderform-body">
                         <div class="orderform-bHeader">
                             <div class="orderform-bItem">Spot</div>
-                            <div class="orderform-bItem active">Cross <span class="status-orange" style="margin-left: 5px;">3x</span></div>
+                            <div class="orderform-bItem active">Cross <span class="status-orange"
+                                    style="margin-left: 5px;">3x</span></div>
                             <div class="orderform-bItem">Isolated 10x</div>
                             <div style="display: flex; flex: 1;"></div>
                             <div class="orderform-bItem">
                                 <a href="">Spot Grid</a>
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-yl1yvv"><path d="M10.5 20v-3h3v3h-3zM10.5 7V4h3v3h-3zM10.5 10.5v3h3v-3h-3z" fill="#76808F"></path></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                    class="css-yl1yvv">
+                                    <path d="M10.5 20v-3h3v3h-3zM10.5 7V4h3v3h-3zM10.5 10.5v3h3v-3h-3z" fill="#76808F">
+                                    </path>
+                                </svg>
                             </div>
                         </div>
                         <div class="orderform-content">
@@ -841,11 +857,24 @@
                                 <div class="header-item">Market</div>
                                 <div class="header-items">
                                     <span>Stop-Limit</span>
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="t.third" class="css-1ipyq67"><path d="M16 9v1.2L12 15l-4-4.8V9h8z" fill="currentColor"></path></svg>
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-1sf5jdr"><path fill-rule="evenodd" clip-rule="evenodd" d="M12 21a9 9 0 100-18 9 9 0 000 18zM10.75 8.5V6h2.5v2.5h-2.5zm0 9.5v-7h2.5v7h-2.5z" fill="currentColor"></path></svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="t.third"
+                                        class="css-1ipyq67">
+                                        <path d="M16 9v1.2L12 15l-4-4.8V9h8z" fill="currentColor"></path>
+                                    </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                        class="css-1sf5jdr">
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M12 21a9 9 0 100-18 9 9 0 000 18zM10.75 8.5V6h2.5v2.5h-2.5zm0 9.5v-7h2.5v7h-2.5z"
+                                            fill="currentColor"></path>
+                                    </svg>
                                 </div>
                                 <div class="header-right">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-16ltl6p"><path fill-rule="evenodd" clip-rule="evenodd" d="M19.5 3h-14v18h14V3zM8 5.5h9v3.908H8V5.5zm6 6h3v7h-3v-7zm-6 0h4V14H8v-2.5zM8 16h4v2.5H8V16z" fill="currentColor"></path></svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                        class="css-16ltl6p">
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M19.5 3h-14v18h14V3zM8 5.5h9v3.908H8V5.5zm6 6h3v7h-3v-7zm-6 0h4V14H8v-2.5zM8 16h4v2.5H8V16z"
+                                            fill="currentColor"></path>
+                                    </svg>
                                 </div>
                             </div>
                         </div>
@@ -1699,7 +1728,15 @@
                             </div>
                             <div class="thirdCol">
                                 <div></div>
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 16" fill="none"><path d="M12.535 2v2.192L16 6.385l3.465-2.192V2L16 4.193 12.535 2z" fill="currentColor"></path><path d="M12.535 5.807V8L16 10.193 19.465 8V5.807L16 8l-3.465-2.193z" fill="currentColor"></path><path d="M12.535 9.615v2.192L16 14l3.465-2.193V9.615L16 11.807l-3.465-2.192zm9.445-2.611H29v1.992h-7.02V7.004zM3 7.004h7.02v1.992H3V7.004z" fill="currentColor"></path></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 16" fill="none">
+                                    <path d="M12.535 2v2.192L16 6.385l3.465-2.192V2L16 4.193 12.535 2z"
+                                        fill="currentColor"></path>
+                                    <path d="M12.535 5.807V8L16 10.193 19.465 8V5.807L16 8l-3.465-2.193z"
+                                        fill="currentColor"></path>
+                                    <path
+                                        d="M12.535 9.615v2.192L16 14l3.465-2.193V9.615L16 11.807l-3.465-2.192zm9.445-2.611H29v1.992h-7.02V7.004zM3 7.004h7.02v1.992H3V7.004z"
+                                        fill="currentColor"></path>
+                                </svg>
                             </div>
                         </a>
                         <a href="#">
@@ -1718,7 +1755,14 @@
                             </div>
                             <div class="thirdCol">
                                 <div></div>
-                                <svg  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 16" fill="none" class="status-red"><path d="M19.484 3v2.676L16.02 8.353l-3.465-2.677V3l3.465 2.676L19.484 3z" fill="currentColor"></path><path d="M19.484 7.647v2.676L16.02 13l-3.465-2.676V7.648l3.465 2.676 3.464-2.676zM10.04 9.216H3.02V6.784h7.02v2.432zm18.98 0H22V6.784h7.02v2.432z" fill="currentColor"></path></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 16" fill="none"
+                                    class="status-red">
+                                    <path d="M19.484 3v2.676L16.02 8.353l-3.465-2.677V3l3.465 2.676L19.484 3z"
+                                        fill="currentColor"></path>
+                                    <path
+                                        d="M19.484 7.647v2.676L16.02 13l-3.465-2.676V7.648l3.465 2.676 3.464-2.676zM10.04 9.216H3.02V6.784h7.02v2.432zm18.98 0H22V6.784h7.02v2.432z"
+                                        fill="currentColor"></path>
+                                </svg>
                             </div>
                         </a>
                     </div>
@@ -1741,8 +1785,19 @@
                 </div>
                 <div class="footer">
                     <div class="footer-left">
-                        <svg width="16" height="12" viewBox="0 0 16 12" fill="none" xmlns="http://www.w3.org/2000/svg"><rect y="9.667" width="1.67" height="2.5" fill="#0ECB81"></rect><rect x="4.44446" y="5.667" width="1.66667" height="6.67" fill="#0ECB81"></rect><rect x="8.88892" y="3" width="1.66667" height="10.83" fill="#0ECB81"></rect><rect x="13.3333" width="1.66667" height="15" fill="#0ECB81"></rect></svg>
+                        <svg width="16" height="12" viewBox="0 0 16 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect y="9.667" width="1.67" height="2.5" fill="#0ECB81"></rect>
+                            <rect x="4.44446" y="5.667" width="1.66667" height="6.67" fill="#0ECB81"></rect>
+                            <rect x="8.88892" y="3" width="1.66667" height="10.83" fill="#0ECB81"></rect>
+                            <rect x="13.3333" width="1.66667" height="15" fill="#0ECB81"></rect>
+                        </svg>
                         <div>Stable Connection</div>
+                    </div>
+                    <div class="footer-right">
+                        <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-zh40w"><path fill-rule="evenodd" clip-rule="evenodd" d="M3 3h18v14h-9l-5 5v-5H3V3zm15 3H6v2.5h12V6zm0 5.5H6V14h12v-2.5z" fill="currentColor"></path></svg>
+                            <span>Online Support</span>
+                        </div>
                     </div>
                 </div>
             </div>
