--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -1776,3 +1776,30 @@ i {
     color: rgb(14, 203, 129);
     font-size: 12px;
 }
+
+.footer-right{
+    display: flex;
+}
+.footer-right div{
+    display: flex;
+    align-items: center;
+    padding: 0px 16px;
+    color: rgb(183, 189, 198);
+    cursor: pointer;
+    font-size: 12px;
+    height: 24px;
+    border-left: 1px solid rgb(35, 40, 45);
+    border-top-color: rgb(35, 40, 45);
+    border-right-color: rgb(35, 40, 45);
+    border-bottom-color: rgb(35, 40, 45);
+}
+.footer-right div svg{
+    box-sizing: border-box;
+    margin-right: 10px;
+    min-width: 0px;
+    color: currentcolor;
+    font-size: 14px;
+    fill: currentcolor;
+    width: 1em;
+    height: 1em;
+}
