Trade_coin: Footer - Create middle and add one icon item with relative position - Update html, css and add demo80

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -1793,6 +1793,10 @@
                         </svg>
                         <div>Stable Connection</div>
                     </div>
+                    <div class="footer-middle">
+                        <div><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-ql8y6o"><path fill-rule="evenodd" clip-rule="evenodd" d="M21 6h-7.79a4.001 4.001 0 00-7.42 0H3v3h2.79a4.001 4.001 0 007.42 0H21V6zm-10.21 9H3v3h7.79a4.001 4.001 0 007.42 0H21v-3h-2.79a4.001 4.001 0 00-7.42 0z" fill="currentColor"></path></svg></div>
+                        
+                    </div>
                     <div class="footer-right">
                         <div>
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-zh40w"><path fill-rule="evenodd" clip-rule="evenodd" d="M3 3h18v16H11l-4 4v-4H3V3zm5.222 4.67c4.143 0 7.501 3.358 7.501 7.5h2a9.5 9.5 0 00-9.5-9.5v2zm3.5 7.5a3.5 3.5 0 00-3.5-3.5v-2a5.5 5.5 0 015.5 5.5h-2zm-3.5 1.5a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" fill="currentColor"></path></svg>
