--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -1806,3 +1806,26 @@ i {
 .footer-right div:hover{
     color: rgb(240, 185, 11);
 }
+
+.footer-middle{
+    margin-left: 32px;
+    flex: 1 1 0%;
+    display: flex;
+    height: 16px;
+}
+
+.footer-middle div:nth-child(1){
+    position: relative;
+    display: inline-block;
+    outline: none;
+}
+.footer-middle div:nth-child(1) svg{
+    box-sizing: border-box;
+    margin-left: 16px;
+    min-width: 0px;
+    color: rgb(132, 142, 156);
+    font-size: 16px;
+    fill: rgb(132, 142, 156);
+    width: 1em;
+    height: 1em;
+}
