Trade_coin: Footer - Finished - Add middle body  - Update html, css and add demo81

--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -1814,12 +1814,12 @@ i {
     height: 16px;
 }
 
-.footer-middle div:nth-child(1){
+.footer-middle .body-left{
     position: relative;
     display: inline-block;
     outline: none;
 }
-.footer-middle div:nth-child(1) svg{
+.footer-middle .body-left svg{
     box-sizing: border-box;
     margin-left: 16px;
     min-width: 0px;
@@ -1828,4 +1828,58 @@ i {
     fill: rgb(132, 142, 156);
     width: 1em;
     height: 1em;
+}
+.footer-middle .body-right{
+    display: flex;
+    flex: 1 1 0%;
+    flex-wrap: wrap;
+    overflow: hidden;
+}
+.footer-middle .body-right .animation{
+    animation-duration: 483s;
+    display: flex;
+    flex-wrap: nowrap;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-name: animation-1hgl3te;
+    animation-delay: 2s;
+}
+.footer-middle-container{
+    box-sizing: border-box;
+    min-width: 0px;
+    display: flex;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+}
+.previewItemWrap{
+    margin-left: 8px;
+    display: flex;
+    cursor: pointer;
+}
+.symbol{
+    color: rgb(183, 189, 198);
+    font-size: 12px;
+    margin-right: 8px;
+}
+.change{
+    font-size: 12px;
+    margin-right: 8px;
+}
+.buy{
+    color: rgb(14, 203, 129);
+}
+.sell{
+    color: rgb(246, 70, 93);
+}
+.lastPrice{
+    font-size: 12px;
+    color: rgb(132, 142, 156);
+    margin-right: 12px;
+}
+.foot-line{
+    margin-top: 3px;
+    width: 1px;
+    height: 10px;
+    background-color: rgb(71, 77, 87);
 }
