--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -1794,28 +1794,77 @@
                         <div>Stable Connection</div>
                     </div>
                     <div class="footer-middle">
-                        <div><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-ql8y6o"><path fill-rule="evenodd" clip-rule="evenodd" d="M21 6h-7.79a4.001 4.001 0 00-7.42 0H3v3h2.79a4.001 4.001 0 007.42 0H21V6zm-10.21 9H3v3h7.79a4.001 4.001 0 007.42 0H21v-3h-2.79a4.001 4.001 0 00-7.42 0z" fill="currentColor"></path></svg></div>
-                        
+                        <div class="body-left">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M21 6h-7.79a4.001 4.001 0 00-7.42 0H3v3h2.79a4.001 4.001 0 007.42 0H21V6zm-10.21 9H3v3h7.79a4.001 4.001 0 007.42 0H21v-3h-2.79a4.001 4.001 0 00-7.42 0z"
+                                    fill="currentColor"></path>
+                            </svg></div>
+                        <div class="body-right">
+                            <div class="animation">
+                                <div class="footer-middle-container">
+                                    <div class="previewItemWrap">
+                                        <div class="symbol">TRXUSDT</div>
+                                        <div class="change sell">-1.31</div>
+                                        <div class="lastPrice">0.06984</div>
+                                        <div class="foot-line"></div>
+                                    </div>
+                                    <div class="previewItemWrap">
+                                        <div class="symbol">MATICUSDT</div>
+                                        <div class="change buy">-3.94</div>
+                                        <div class="lastPrice">0.9554</div>
+                                        <div class="foot-line"></div>
+                                    </div>
+                                    <div class="previewItemWrap">
+                                        <div class="symbol">DOGEUSDT</div>
+                                        <div class="change sell">-2.26</div>
+                                        <div class="lastPrice">0.07665</div>
+                                        <div class="foot-line"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="footer-right">
                         <div>
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-zh40w"><path fill-rule="evenodd" clip-rule="evenodd" d="M3 3h18v16H11l-4 4v-4H3V3zm5.222 4.67c4.143 0 7.501 3.358 7.501 7.5h2a9.5 9.5 0 00-9.5-9.5v2zm3.5 7.5a3.5 3.5 0 00-3.5-3.5v-2a5.5 5.5 0 015.5 5.5h-2zm-3.5 1.5a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" fill="currentColor"></path></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-zh40w">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M3 3h18v16H11l-4 4v-4H3V3zm5.222 4.67c4.143 0 7.501 3.358 7.501 7.5h2a9.5 9.5 0 00-9.5-9.5v2zm3.5 7.5a3.5 3.5 0 00-3.5-3.5v-2a5.5 5.5 0 015.5 5.5h-2zm-3.5 1.5a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"
+                                    fill="currentColor"></path>
+                            </svg>
                             <span>Feed</span>
                         </div>
                         <div>
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="t.secondary" class="css-zh40w"><path fill-rule="evenodd" clip-rule="evenodd" d="M12 3a7 7 0 00-7 7v3l-1 1v2h16v-2l-1-1v-3a7 7 0 00-7-7zm0 18a5.001 5.001 0 01-4.584-3h9.168A5.001 5.001 0 0112 21z" fill="currentColor"></path></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="t.secondary"
+                                class="css-zh40w">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M12 3a7 7 0 00-7 7v3l-1 1v2h16v-2l-1-1v-3a7 7 0 00-7-7zm0 18a5.001 5.001 0 01-4.584-3h9.168A5.001 5.001 0 0112 21z"
+                                    fill="currentColor"></path>
+                            </svg>
                             <span>Announcements</span>
                         </div>
                         <div>
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-zh40w"><path fill-rule="evenodd" clip-rule="evenodd" d="M4 16V4h16v12l-8 5-8-5zm10-6.24a2 2 0 01-1 1.732v2.506h-2v-2.506a2 2 0 113-1.732z" fill="currentColor"></path></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-zh40w">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M4 16V4h16v12l-8 5-8-5zm10-6.24a2 2 0 01-1 1.732v2.506h-2v-2.506a2 2 0 113-1.732z"
+                                    fill="currentColor"></path>
+                            </svg>
                             <span>Cookie Preferences</span>
                         </div>
                         <div>
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-zh40w"><path fill-rule="evenodd" clip-rule="evenodd" d="M7.5 9V6H16v3h3V3H4.5v6h3zm-3 12H19v-6h-3v3H7.5v-3h-3v6zm6.009-13h3v4.002l2.508.006-4.008 4.008-4.01-4.008 2.51-.025V8z" fill="currentColor"></path></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-zh40w">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M7.5 9V6H16v3h3V3H4.5v6h3zm-3 12H19v-6h-3v3H7.5v-3h-3v6zm6.009-13h3v4.002l2.508.006-4.008 4.008-4.01-4.008 2.51-.025V8z"
+                                    fill="currentColor"></path>
+                            </svg>
                             <span>Download</span>
                         </div>
                         <div>
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-zh40w"><path fill-rule="evenodd" clip-rule="evenodd" d="M3 3h18v14h-9l-5 5v-5H3V3zm15 3H6v2.5h12V6zm0 5.5H6V14h12v-2.5z" fill="currentColor"></path></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" class="css-zh40w">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M3 3h18v14h-9l-5 5v-5H3V3zm15 3H6v2.5h12V6zm0 5.5H6V14h12v-2.5z"
+                                    fill="currentColor"></path>
+                            </svg>
                             <span>Online Support</span>
                         </div>
                     </div>
